# Anchor

./: CMakeLists.txt
Common/: CMakeLists.txt  LFQueue.cpp  LFQueue.hpp  Logging.cpp  Logging.hpp  MCastSocket.cpp  MCastSocket.hpp  Macros.hpp  MemoryPool.cpp  MemoryPool.hpp  PerfUtils.hpp  SocketUtils.cpp  SocketUtils.hpp  TCPServer.cpp  TCPServer.hpp  TCPSocket.cpp  TCPSocket.hpp  ThreadUtils.cpp  ThreadUtils.hpp  TimeUtils.hpp  Types.hpp
Exchange/: CMakeLists.txt  ExchangeMain.cpp
Exchange/MarketData/: MarketDataPublisher.cpp  MarketDataPublisher.hpp  MarketUpdate.hpp  SnapshotSynthesizer.cpp  SnapshotSynthesizer.hpp
Exchange/Matcher/: MatchingEngine.cpp  MatchingEngine.hpp  MatchingEngineOrder.cpp  MatchingEngineOrder.hpp  MatchingEngineOrderBook.cpp  MatchingEngineOrderBook.hpp
Exchange/OrderServer/: .ClientRequest.hpp.swo  .ClientRequest.hpp.swp  ClientRequest.hpp  ClientResponse.hpp  FIFOSequencer.hpp  OrderServer.cpp  OrderServer.hpp
Scripts/: benchmarks.sh  no_clean_build.sh
Trading/: CMakeLists.txt  TradingMain.cpp
Trading/MarketData/: MarketDataConsumer.cpp  MarketDataConsumer.hpp
Trading/OrderGateway/: OrderGateway.cpp  OrderGateway.hpp
Trading/Strategy/: FeatureEngine.hpp  LiquidityTaker.cpp  LiquidityTaker.hpp  MarketMaker.cpp  MarketMaker.hpp  MarketOrder.cpp  MarketOrder.hpp  MarketOrderBook.cpp  MarketOrderBook.hpp  OMOrder.hpp  OrderManager.cpp  OrderManager.hpp  PositionKeeper.hpp  RiskManager.cpp  RiskManager.hpp  TradeEngine.cpp  TradeEngine.hpp
